styled .icons class and added correct spacing in .info.card class.

--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -70,6 +70,12 @@ align-items: center;
 flex-direction: row;
 padding: 2% 0% 5% 0%;
 }
+.info-card-text p {
+	margin: 0;
+}
+.info-card-text p:first-of-type {
+	margin-top: 1.5rem;
+}
 .icons {
 	display: flex;
 	align-items: center;
